Add About Us page with team section and mission statemen

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>About Us | MyBlogWebsite</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="blog.css" /> 
+  <script src="https://kit.fontawesome.com/16f2c495d2.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
