--- a/blog.html
+++ b/blog.html
@@ -12,10 +12,10 @@
     <header>
       <nav>
         <ul>
-          <li><i class="fa fa-home"></i>  <a href="#">Home</a></li>
-          <li><i class="fa-solid fa-address-card"></i>  <a href="#">About</a></li>
-          <li><i class="fa-brands fa-blogger"></i>  <a href="#">Blog</a></li>
-          <li><i class="fa-solid fa-phone"></i>  <a href="#">Contact</a></li>
+          <li><a href="#"><i class="fa fa-home"></i>  Home</a></li>
+          <li><a href="#"><i class="fa-solid fa-address-card"></i>  About</a></li>
+          <li><a href="#"><i class="fa-brands fa-blogger"></i>  Blog</a></li>
+          <li><a href="#"><i class="fa-solid fa-phone"></i>  Contact</a></li>
         </ul>
       </nav>
     </header>
