Add About Us page with team sectioAdd About Us page with team section and mission statement

--- a/aboutus.html
+++ b/aboutus.html
@@ -10,10 +10,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/"><i class="fa fa-home"></i>   Home</a></li>
+        <li><a href="/blog.html"><i class="fa-solid fa-address-card"></i>   </i>Blog</a></li>
+        <li><a href="/about"><i class="fa-brands fa-blogger">   </i>About Us</a></li>
+        <li><a href="/contact"><i class="fa-solid fa-phone">    </i>  Contact Us</a></li>
       </ul>
     </nav>
   </header>
