--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="#"><i class="fa fa-home"></i>  Home</a></li>
-          <li><a href="#"><i class="fa-solid fa-address-card"></i>  About</a></li>
+          <li><a href="aboutus.html"><i class="fa-solid fa-address-card"></i>  About</a></li>
           <li><a href="#"><i class="fa-brands fa-blogger"></i>  Blog</a></li>
           <li><a href="#"><i class="fa-solid fa-phone"></i>  Contact</a></li>
         </ul>
